[gd_scene load_steps=3 format=3 uid="uid://ndi3eyvfibw0"]

[ext_resource type="Script" uid="uid://8y0brmm34oa5" path="res://scene/UI/main_menu/main_menu.gd" id="1_vf4kd"]
[ext_resource type="Texture2D" uid="uid://bdyoysnbmtli7" path="res://scene/UI/main_menu/Background.png" id="2_smsuw"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_vf4kd")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_smsuw")

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25

[node name="GameNameLabel" type="Label" parent="MainMarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 65
text = "GEOMETRY MAYHEM"

[node name="ButtonMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer/ButtonMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Play"
alignment = 0

[node name="ArtefactButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Artefacts"
alignment = 0

[node name="TalantsButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Talants"
alignment = 0

[node name="SettingsButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Settings"
alignment = 0

[node name="ExitButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Exit"
alignment = 0

[node name="ButtonMarginContainer2" type="MarginContainer" parent="MainMarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer/ButtonMarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StatisticButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30
text = "Statistic"
alignment = 0

[node name="AchievementsButton" type="Button" parent="MainMarginContainer/ButtonMarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "Achievements"
alignment = 0

[node name="VersionMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_right = 20

[node name="VersionLabel" type="Label" parent="MainMarginContainer/VersionMarginContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "v 0.1a"

[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer/VBoxContainer/ArtefactButton" to="." method="_on_artefact_button_pressed"]
[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer/VBoxContainer/TalantsButton" to="." method="_on_talants_button_pressed"]
[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MainMarginContainer/ButtonMarginContainer2/VBoxContainer/StatisticButton" to="." method="_on_statistic_button_pressed"]
